[tool.poetry]
name = "iconnmon"
version = "0.1.0"
description = "A tool to monitor and log internet connectivity"
authors = ["Carsten Skov <carsten@simcax.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
influxdb = "^5.3.1"
shell = "^1.0.1"
influxdb-client = "^1.38.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
